--- a/index.html
+++ b/index.html
@@ -21,5 +21,26 @@
 
   <body>
     <title>Sophia Zhu</title>
+    <div class="section2">
+
+      <div class="slideshow">
+        <b>Hello</b>
+      </div>
+      
+      <div><img id="sophiaphoto" src="/images/sophiaimg.JPG"></div>
+
+      <div class="contact">
+        <b>contact me</b>
+      </div>
+
+    </div>
+  </body>
+
+  <footer>
+      <div class="footerrect">
+        <h2 id="foottext">Stay curious</h2>
+        <h2 id="foottext">Sophia Zhu 2025</h2>
+      </div>
+    </footer>
 </html>
 
